--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="htpps://www.w3schttpshools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
           
 <!-- Cabeçalho da imagem -->
     <div class="w3-display-container w3-container">
-      <img src="/w3images/jeans.jpg" alt="Jeans" style="width:100%">
+      <img src="w3-jeans.jpg" alt="Jeans" style="width:100%">
     <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
       <h1 class="w3-jumbo w3-hide-small">Novidades</h1>
       <h1 class="w3-hide-large w3-hide-medium">Novidades</h1>
@@ -86,11 +86,11 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-row w3-grayscale">
    <div class="w3-col l3 s6">
     <div class="w3-container">
-      <img src="/w3images/jeans1.jpg" style="width:100%">
+      <img src="jeans-skinny.jpg" style="width:100%">
       <p>Jeans Skinny Rasgados<br><b>$24.99</b></p>
   </div>
       <div class="w3-container">
-        <img src="/w3images/jeans2.jpg" style="width:100%">
+        <img src="jeans-mega-rasgados.jpg" style="width:100%">
           <p>Jeans Mega Rasgados<br><b>$19.99</b></p>
     </div>
         </div>
@@ -98,7 +98,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <div class="w3-display-container">
-          <img src="/w3images/jeans2.jpg" style="width:100%">
+          <img src="jeans-mega-rasgados.jpg" style="width:100%">
             <span class="w3-tag w3-display-topleft">Novo</span>
               <div class="w3-display-middle w3-display-hover">
                 <button class="w3-button w3-black">Compre agora<i class="fa fa-shopping-cart"></i></button>
@@ -107,19 +107,19 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
        <p>Jeans Mega Rasgados<br><b>$19.99</b></p>
       </div>
       <div class="w3-container">
-        <img src="/w3images/jeans3.jpg" style="width:100%">
+        <img src="jeans-lavados.jpg" style="width:100%">
         <p>Jeans Skinny Lavados<br><b>$20.50</b></p>
       </div>
       </div>
           
       <div class="w3-col l3 s6">
         <div class="w3-container">
-          <img src="/w3images/jeans3.jpg" style="width:100%">
+          <img src="jeans-lavados.jpg" style="width:100%">
             <p>Jeans Skinny Lavados<br><b>$20.50</b></p>
       </div>
           <div class="w3-container">
             <div class="w3-display-container">
-              <img src="/w3images/jeans4.jpg" style="width:100%">
+              <img src="Jeans-Vintage.jpg" style="width:100%">
                <span class="w3-tag w3-display-topleft">Venda</span>
                  <div class="w3-display-middle w3-display-hover">
                    <button class="w3-button w3-black">Compre agora <i class="fa fa-shopping-cart"></i></button>
@@ -130,11 +130,11 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
                   </div>
                   <div class="w3-col l3 s6">
                     <div class="w3-container">
-                      <img src="/w3images/jeans4.jpg" style="width:100%">
+                      <img src="Jeans-Vintage.jpg" style="width:100%">
                       <p>Vintage Skinny Jeans<br><b>$14.99</b></p>
                     </div>
                     <div class="w3-container">
-                      <img src="/w3images/jeans1.jpg" style="width:100%">
+                      <img src="jeans-skinny.jpg" style="width:100%">
                       <p>Ripped Skinny Jeans<br><b>$24.99</b></p>
                     </div>
                   </div>
